# quiet-lwip

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  loopback.c
examples/include/: relay.h
examples/src/: discovery_client.c  discovery_server.c  kv_client.c  kv_server.c  proxy_client.c  proxy_server.c  relay.c
include/: quiet-lwip-portaudio.h  quiet-lwip.h
include/lwip/arch/: cc.h
include/lwip/lwip/: netdb.h  opt.h
include/quiet-lwip/: driver.h  driver_portaudio.h  lwip-netdb.h  lwip-socket.h  util.h
src/: driver.c  driver_portaudio.c  util.c
src/lwip/: CMakeLists.txt  sys_arch.c
src/lwip/api/: CMakeLists.txt  api_msg.c  netdb.c  sockets.c
src/lwip/core/: CMakeLists.txt
src/lwip/core/ipv4/: CMakeLists.txt  ip.c
src/lwip/netif/: CMakeLists.txt
tools/: dump2text.py
